# djangosaml2idp

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README.rst  ROADMAP.md  conftest.py  generate.sh  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
djangosaml2idp/: __init__.py  admin.py  conf.py  decorators.py  error_views.py  forms.py  identity.py  idp.py  middleware.py  models.py  processors.py  settings.py  urls.py  utils.py  views.py
djangosaml2idp/migrations/: 0001_initial.py  0001_initial_squashed_swappable.py  0002_auto_20190322_1457.py  0002_change_persistent_id_to_uuid_field.py  0002_persistent_id.py  0003_auto_20190327_1445.py  0003_auto_20200503_1134.py  0003_use_unique_constraint_for_persistent_id.py  0004_auto_20190327_1453.py  0005_auto_20190327_1454.py
docs/: Makefile  conf.py  configuration.rst  error.rst  index.rst  installation.rst  make.bat  multifactor.rst  toc_header.rst
docs/example_setup/: README.rst
example_setup/: README.md  README.rst  docker-compose.yml  dump.json  private.key  public.cert
example_setup/idp/: Dockerfile  djangosaml2idp  manage.py  requirements.txt
example_setup/nginx/: Dockerfile  idp.localhost.com.conf  sp.localhost.com.conf
stubs/: settings.py
tests/: private.pem  public.pem  settings.py  test_conf.py  test_error_views.py  test_forms.py  test_idp.py  test_models.py  test_processor.py  test_urls.py  test_utils.py  test_views.py  testing_utilities.py  urls.py
(+56 files in other folders)
