[bdist_wheel]
universal = 1

[metadata]
description-file = README.md
license_file = LICENSE.txt

[aliases]
test = pytest

[pylama]
linters = pycodestyle,pyflakes,mccabe
ignore = E122,E127,E128,E131,W191,E501,C0111,C0301,W191,C901
skip =
    build/*,
    dist/*,
    docs/*,
    */manage.py,
    *migrations*,
    venv/*

[pep8]
ignore = C0111,C0301,E122,E127,E128,E131,E501,E502,E722,E731,W605

[tool:pytest]
addopts =
    -rX
    --cov=djangosaml2idp
    --cov-report=term-missing
django_find_project = false
norecursedirs = env
testpaths = tests/
python_paths = .
DJANGO_SETTINGS_MODULE = tests.settings

[coverage:run]
omit =
    */migrations/*

[tox:tox]
envlist =
    py{36,37,38}-django{20,21,22,30}
    format

[testenv]
extras = testing
deps =
    django20: django~=2.0
    django21: django~=2.1
    django22: django~=2.2
    django30: django~=3.0
commands =
    pip list
    python setup.py test

[testenv:format]
skipsdist = True
deps = pylama
commands = pylama djangosaml2idp
